--- a/package.json
+++ b/package.json
@@ -37,8 +37,13 @@
   },
   "dependencies": {
     "bunyan": "~0.22.3",
+    "handlebars": "^3.0.0",
+    "lodash": "^3.5.0",
+    "lodash-deep": "^1.5.3",
     "oauth": "~0.9.11",
-    "simple-errors": "0.0.5"
+    "simple-errors": "0.0.5",
+    "soap": "^0.8.0",
+    "xml2js": "^0.4.6"
   },
   "keywords": []
 }
