--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "~2.6.0"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bunyan": "~0.22.3",
     "handlebars": "^3.0.0",
     "lodash": "^3.5.0",
