--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "dependencies": {
     "async": "^0.9.0",
     "bunyan": "~0.22.3",
+    "file-exists": "^0.1.1",
     "handlebars": "^3.0.0",
+    "jsonfile": "^2.0.0",
     "lodash": "^3.5.0",
     "lodash-deep": "^1.5.3",
     "oauth": "~0.9.11",
